scripts/nullaway/wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8.txt
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/core/Triples.java:94: error: [NullAway] dereferenced expression s is @Nullable
        if (s.equals(p))
             ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/core/Triples.java:98: error: [NullAway] dereferenced expression p is @Nullable
        if (p.equals(o))
             ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/core/Triples.java:118: error: [NullAway] dereferenced expression t.getPredicate() is @Nullable
            if (t.getPredicate().equals(p)) {
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/core/Triples.java:129: error: [NullAway] dereferenced expression t.getObject() is @Nullable
            if (t.getObject().equals(o)) {
                             ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/core/Triples.java:140: error: [NullAway] dereferenced expression t.getPredicate() is @Nullable
            if (t.getPredicate().equals(p)) {
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/core/Triple.java:15: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.subject = subject;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/core/Triple.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.predicate = predicate;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/core/Triple.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.object = object;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/io/RDFFileReader.java:17: error: [NullAway] enhanced-for expression getLines(filePath) is @Nullable
        for (final String line : getLines(filePath)) {
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/AbstractPrimitiveQuery.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.s = s;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/AbstractPrimitiveQuery.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.p = p;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/AbstractPrimitiveQuery.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.o = o;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:66: error: [NullAway] dereferenced expression s is @Nullable
        return s.equals(p) ? new XXO(s, p, o) : new XYO(s, p, o);
                ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:66: error: [NullAway] passing @Nullable parameter 'p' where @NonNull is required
        return s.equals(p) ? new XXO(s, p, o) : new XYO(s, p, o);
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:71: error: [NullAway] dereferenced expression p is @Nullable
        return p.equals(o) ? new SXX(s, p, o) : new SXY(s, p, o);
                ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:71: error: [NullAway] passing @Nullable parameter 'o' where @NonNull is required
        return p.equals(o) ? new SXX(s, p, o) : new SXY(s, p, o);
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:76: error: [NullAway] dereferenced expression s is @Nullable
        return s.equals(o) ? new XPX(s, p, o) : new XPY(s, p, o);
                ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:76: error: [NullAway] passing @Nullable parameter 'o' where @NonNull is required
        return s.equals(o) ? new XPX(s, p, o) : new XPY(s, p, o);
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:81: error: [NullAway] dereferenced expression s is @Nullable
        if (s.equals(p) && p.equals(o))
             ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:81: error: [NullAway] dereferenced expression p is @Nullable
        if (s.equals(p) && p.equals(o))
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:82: error: [NullAway] passing @Nullable parameter 'o' where @NonNull is required
            return new XXX(s, p, o);
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:84: error: [NullAway] passing @Nullable parameter 'p' where @NonNull is required
            return new XXY(s, p, o);
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:85: error: [NullAway] dereferenced expression p is @Nullable
        if (p.equals(o))
             ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:86: error: [NullAway] passing @Nullable parameter 'o' where @NonNull is required
            return new XYY(s, p, o);
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/primitive/PrimitiveQueryFactory.java:88: error: [NullAway] passing @Nullable parameter 'o' where @NonNull is required
            return new XYX(s, p, o);
                                 ^
    (see http://t.uber.com/nullaway )
25 errors
